@@ -45,7 +45,6 @@ import org.apache.tajo.engine.query.exception.UndefinedFunctionException;
 import org.apache.tajo.engine.utils.SchemaUtil;
 import org.apache.tajo.exception.InternalException;
 
-import java.io.IOException;
 import java.util.List;
 import java.util.Stack;
 
@@ -118,7 +117,8 @@ public class LogicalPlanner extends BaseAlgebraVisitor<LogicalPlanner.PlanContex
   public LogicalNode postHook(PlanContext context, Stack<OpType> stack, Expr expr, LogicalNode current)
       throws PlanningException {
     // Post work
-    if (expr.getType() == OpType.RelationList && ((RelationList) expr).size() == 1) {
+    if ((expr.getType() == OpType.RelationList && ((RelationList) expr).size() == 1)
+        || expr.getType() == OpType.Having) {
       return current;
     }
 
@@ -454,7 +454,7 @@ public class LogicalPlanner extends BaseAlgebraVisitor<LogicalPlanner.PlanContex
       for (int i = 0; i < groupElements.length; i++) {
         annotatedElements[i] = new GroupElement(
             groupElements[i].getType(),
-            annotateGroupingColumn(plan, block.getName(), groupElements[i].getColumns(), null));
+            annotateGroupingColumn(plan, block, groupElements[i].getColumns(), null));
       }
       GroupbyNode groupingNode = new GroupbyNode(plan.newPID(), annotatedElements[0].getColumns());
       if (aggregation.hasHavingCondition()) {
@@ -472,7 +472,7 @@ public class LogicalPlanner extends BaseAlgebraVisitor<LogicalPlanner.PlanContex
       return groupingNode;
 
     } else if (groupElements[0].getType() == GroupType.Cube) { // for cube by
-      List<Column[]> cuboids  = generateCuboids(annotateGroupingColumn(plan, block.getName(),
+      List<Column[]> cuboids  = generateCuboids(annotateGroupingColumn(plan, block,
           groupElements[0].getColumns(), null));
       UnionNode topUnion = createGroupByUnion(plan, block, child, cuboids, 0);
       block.resolveGroupingRequired();
@@ -538,12 +538,14 @@ public class LogicalPlanner extends BaseAlgebraVisitor<LogicalPlanner.PlanContex
   /**
    * It transforms a list of column references into a list of annotated columns with considering aliased expressions.
    */
-  private Column[] annotateGroupingColumn(LogicalPlan plan, String blockName,
+  private Column[] annotateGroupingColumn(LogicalPlan plan, QueryBlock block,
                                            ColumnReferenceExpr[] columnRefs, LogicalNode child)
-      throws VerifyException {
+      throws PlanningException {
+
     Column[] columns = new Column[columnRefs.length];
     for (int i = 0; i < columnRefs.length; i++) {
-      columns[i] = plan.resolveColumn(plan.getBlock(blockName), null, columnRefs[i]);
+      columns[i] = plan.resolveColumn(block, null, columnRefs[i]);
+      columns[i] = plan.getColumnOrAliasedColumn(block, columns[i]);
     }
 
     return columns;
@@ -605,8 +607,8 @@ public class LogicalPlanner extends BaseAlgebraVisitor<LogicalPlanner.PlanContex
     Sort.SortSpec[] sortSpecs = sort.getSortSpecs();
     for (int i = 0; i < sort.getSortSpecs().length; i++) {
       column = plan.resolveColumn(block, null, sortSpecs[i].getKey());
-      annotatedSortSpecs[i] = new SortSpec(column, sortSpecs[i].isAscending(),
-          sortSpecs[i].isNullFirst());
+      column = plan.getColumnOrAliasedColumn(block, column);
+      annotatedSortSpecs[i] = new SortSpec(column, sortSpecs[i].isAscending(), sortSpecs[i].isNullFirst());
     }
     SortNode sortNode = new SortNode(context.plan.newPID(), annotatedSortSpecs);
 
@@ -663,7 +665,7 @@ public class LogicalPlanner extends BaseAlgebraVisitor<LogicalPlanner.PlanContex
       evalOnly.setOutSchema(getProjectedSchema(plan, evalOnly.getExprs()));
       block.setProjectionNode(evalOnly);
       for (int i = 0; i < evalOnly.getTargets().length; i++) {
-        block.targetListManager.update(i, evalOnly.getTargets()[i]);
+        block.targetListManager.fill(i, evalOnly.getTargets()[i]);
       }
       return evalOnly;
     }
@@ -1115,7 +1117,7 @@ public class LogicalPlanner extends BaseAlgebraVisitor<LogicalPlanner.PlanContex
   }
 
   private FieldEval createFieldEval(LogicalPlan plan, QueryBlock block,
-                                    ColumnReferenceExpr columnRef) throws VerifyException {
+                                    ColumnReferenceExpr columnRef) throws PlanningException {
     Column column = plan.resolveColumn(block, null, columnRef);
     return new FieldEval(column);
   }
