@@ -94,6 +94,29 @@ public class TestSortQuery {
   }
 
   @Test
+  public final void testSortWithAliasButOriginalName() throws Exception {
+    ResultSet res = tpch.execute(
+        "select l_linenumber, l_orderkey as sortkey from lineitem order by l_orderkey");
+    try {
+      int cnt = 0;
+      Long prev = null;
+      while(res.next()) {
+        if (prev == null) {
+          prev = res.getLong(2);
+        } else {
+          assertTrue(prev <= res.getLong(2));
+          prev = res.getLong(2);
+        }
+        cnt++;
+      }
+
+      assertEquals(5, cnt);
+    } finally {
+      res.close();
+    }
+  }
+
+  @Test
   public final void testSortDesc() throws Exception {
     ResultSet res = tpch.execute(
         "select l_linenumber, l_orderkey from lineitem order by l_orderkey desc");
